Replaced fixed number of threads per download with a variable number, with default of 6. Fixed hard coded paths